sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: not enough arguments for method isSmallerThan: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
      if(!isSmallerThan(getValue((i+k),v))){
                       ^